# ProyectoCV

./: CMakeLists.txt
lib/: CMakeLists.txt  Label.cxx  Label.h
test/: CMakeLists.txt  camera_capture_module.cxx
